--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+.container {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+.title {
+  font-size: 4.4rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.label {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  margin-right: 16px;
+}
+
+.input {
+  font-size: 1.6rem;
+  padding: 0.5rem 2rem;
+  border-radius: 20px;
+  border: 1px solid lightgray;
+  margin-right: 16px;
+}
+
+.button {
+  background-color: rgba(0,0,0,0.75);
   color: white;
+  padding: 1rem 2rem;
+  border: 1px solid rgba(0,0,0,0.75);
+  border-radius: 20px;
+  font-size: 1.4rem;
+  cursor: pointer;
+  transition: background-color 250ms;
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover {
+  background-color: rgba(0,0,0,0.85);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  padding: 2rem 4rem;
+  border-radius: 10px;
+  box-shadow: 1px 1px 5px;
+  margin-bottom: 2rem;
+  background-color: white;
+}
+
+.card-image {
+  width: 185px;
+  height: 285px;
+  margin: 0 auto;
+  display: block;
+}
+
+.card-title {
+  font-size: 3.2rem;
+  margin-bottom: 0.8rem;
+}
+
+.card-subtext {
+  font-size: 0.9rem;
+  margin-bottom: 0.8rem;
+}
+
+.card-overview {
+  margin-top: 0.6rem;
+  font-size: 1.2rem;
+  margin-bottom: 3rem;
+}
+
+.review-header {
+  display: 'flex';
+  align-items: 'center';
+}
+
+.review-image {
+  width: 48px;
+  height: 48px;
+}
+
+.review {
+  margin-bottom: 1.5rem;
 }
